tests/errors/main.rs
mod error_tests;

mod capacity_error;
mod collection_error;
mod collision;
mod extend_error;
mod result_collection_error;
mod tuple_extend_error;
mod unzip_error;

#[path = "../utils/mod.rs"]
mod utils;
